--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    // "sqlConnection": " Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = bsStoreAppDb; Integrated Security=true;"
-    "sqlConnection": " Data Source = CANSU\\SQLEXPRESS04; Initial Catalog = bsStoreAppDb; Integrated Security=true;"
+    "sqlConnection": " Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = bsStoreAppDb; Integrated Security=true;"
+    //"sqlConnection": " Data Source = CANSU\\SQLEXPRESS04; Initial Catalog = bsStoreAppDb; Integrated Security=true;"
   }
 }
